Just a few changes, nothing more

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             </a>
           </div>
         </div>
-        <div class="header_img"></div>
+        <div class="header_img">
+          <img src="./assets/images/header-img.jpg" alt="" />
+        </div>
       </div>
     </header>
     <main>
