Check and solve the errors

--- a/services_inside.html
+++ b/services_inside.html
@@ -21,7 +21,9 @@
       <nav class="navbar">
         <div class="container">
           <div class="logo">
-            <a href="/"><img src="./assets/images/logo.png" alt="logo" /></a>
+            <a href="index.html"
+              ><img src="./assets/images/logo.png" alt="logo"
+            /></a>
           </div>
           <ul>
             <li class="navbar_lang">
@@ -107,7 +109,9 @@
       <div class="container">
         <div class="footer_down">
           <div class="logo">
-            <a href="/"><img src="./assets/images/logo.png" alt="logo" /></a>
+            <a href="index.html"
+              ><img src="./assets/images/logo.png" alt="logo"
+            /></a>
           </div>
           <div class="footer_block">
             <ul>
